--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,13 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "pt": {
+              "aot": true,
+              "outputPath": "dist/pokedex-pt",
+              "i18nFile": "src/locale/messages.pt.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "pt"
             }
           }
         },
@@ -55,6 +62,9 @@
           "configurations": {
             "production": {
               "browserTarget": "pokedex:build:production"
+            },
+            "pt": {
+              "browserTarget": "pokedex:build:pt"
             }
           }
         },
@@ -115,6 +125,46 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "pokedata": {
+      "root": "projects/pokedata",
+      "sourceRoot": "projects/pokedata/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/pokedata/tsconfig.lib.json",
+            "project": "projects/pokedata/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/pokedata/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/pokedata/src/test.ts",
+            "tsConfig": "projects/pokedata/tsconfig.spec.json",
+            "karmaConfig": "projects/pokedata/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/pokedata/tsconfig.lib.json",
+              "projects/pokedata/tsconfig.spec.json"
+            ],
             "exclude": [
               "**/node_modules/**"
             ]
